1st version cards + shorthand menus no function

--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
     </header>
 
     <main>
-    <div class="employeecard">
-      <img src="./img/xps-g2E2NQ5SWSU-unsplash.jpg" alt="" class="employeecard__img
-      ">
-      <p class="employeecard__name">Tom Holland</p>
-      <p class="employeecard__position">Consultant</p>
-      <a href="" class="employeecard__phone">+123 456789</a>
-      <a href="" class="employeecard__mail">mail@mail.com</a>
-    </div>
+      <div class="employeecard__container">
+
+        <div class="employeecard">
+          <img src="./img/xps-g2E2NQ5SWSU-unsplash.jpg" alt="" class="employeecard__img">
+          <p class="employeecard__name">Tom Holland</p>
+          <p class="employeecard__position">Consultant</p>
+          <a href="" class="employeecard__phone">+123 456789</a>
+          <a href="" class="employeecard__mail">mail@mail.com</a>
+        </div>
+      </div>
     </main>
    <!--  <footer>
 
