responsive font-size

--- a/index.html
+++ b/index.html
@@ -10,27 +10,9 @@
   </head>
   <body>
     <main>
-
-      <div class="dropdown">
-        <h3>Pick a date</h3>
-        <div class="dropdown-options-container">
-            <select name="month" id="month">
-                <option value="january">January</option>
-                <option value="february">February</option>
-                <option value="march">March</option>
-                <option value="april">April</option>
-                <option value="may">May</option>
-                <option value="juny">Juny</option>
-                <option value="july">July</option>
-                <option value="august">August</option>
-                <option value="september">September</option>
-                <option value="october">October</option>
-                <option value="november">November</option>
-                <option value="december">December</option>
-            </select>
-    </div>
+      <h1>Hello</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ab pariatur tenetur obcaecati ipsam inventore vel natus fugiat, voluptatem, vero fuga minus aliquam placeat voluptas. Numquam quia necessitatibus aut omnis mollitia a rem consequatur sunt repudiandae deserunt obcaecati, reiciendis, itaque illum incidunt in corporis, quidem animi placeat ea repellat esse?</p>
 
     </main>
-    <script src="./scss/04components/otherComponents/toggle.js"></script>
   </body>
 </html>
