header + footer done (with trouble)

--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://kit.fontawesome.com/8760c187cc.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/main.css" />
-    <title>Name</title>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100;400;700&display=swap" rel="stylesheet"> 
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="./css/main.css">
+    <title>React App</title>
   </head>
   <body>
-    <main>
-      <h1>Hello</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ab pariatur tenetur obcaecati ipsam inventore vel natus fugiat, voluptatem, vero fuga minus aliquam placeat voluptas. Numquam quia necessitatibus aut omnis mollitia a rem consequatur sunt repudiandae deserunt obcaecati, reiciendis, itaque illum incidunt in corporis, quidem animi placeat ea repellat esse?</p>
-
-    </main>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    
+    <div id="root"></div>
   </body>
 </html>
